# lyric-forge

./: .env.example  .gitignore  CLAUDE.md  README.md  code-review-prompt.md  lyricforge-mvp-spec.md  pyproject.toml
lyricforge/: __init__.py  analyzer.py  cli.py  database.py  lyrics.py  models.py
tests/: test_analyzer.py  test_cli.py  test_lyrics.py  test_models.py
